[gd_scene load_steps=4 format=3 uid="uid://b2q6elqipnirj"]

[ext_resource type="Script" uid="uid://cq7wxonqoxo6v" path="res://scripts/marcadores.gd" id="1_aptd4"]
[ext_resource type="Texture2D" uid="uid://bhaspumxmjc0m" path="res://assets/textures/coins-ssheet-alpha.png" id="2_cdxkj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aptd4"]
bg_color = Color(0.0666667, 0.364706, 0.894118, 0.482353)

[node name="Marcadores" type="CanvasLayer"]

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_aptd4")
script = ExtResource("1_aptd4")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 83

[node name="VBoxContainer0" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="ScoreText" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer0"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Score"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreNum" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer0"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer1" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer1"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer1/Label"]
position = Vector2(15, 7)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_cdxkj")
hframes = 6

[node name="CoinsNum" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer1"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "x 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="WorldText" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "World"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WorldNum" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "1-1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="TimeText" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Time"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeNum" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
horizontal_alignment = 1
vertical_alignment = 1
